feat(prism-agent): add new REST api endpoints for issue credential procotol
