# prism-agent/service/server/src/main/scala/io/iohk/atala/agent/server/http/marshaller/IssueCredentialsProtocolApiMarshallerImpl.scala
@@ -6,19 +6,26 @@ import spray.json.RootJsonFormat
 import io.iohk.atala.pollux.core.service.CredentialService
 import akka.http.scaladsl.marshalling.ToEntityMarshaller
 import akka.http.scaladsl.unmarshalling.FromEntityUnmarshaller
-import io.iohk.atala.agent.openapi.model.SendCredentialOfferRequest
-import io.iohk.atala.agent.openapi.model.CreateIssueCredentialRecordResponse
+import io.iohk.atala.agent.openapi.model.*
 
 object IssueCredentialsProtocolApiMarshallerImpl extends JsonSupport {
   val layer: ULayer[IssueCredentialsProtocolApiMarshaller] = ZLayer.succeed {
     new IssueCredentialsProtocolApiMarshaller {
-      implicit def fromEntityUnmarshallerSendCredentialOfferRequest
-          : FromEntityUnmarshaller[SendCredentialOfferRequest] =
-        summon[RootJsonFormat[SendCredentialOfferRequest]]
 
-      implicit def toEntityMarshallerCreateIssueCredentialRecordResponse
-          : ToEntityMarshaller[CreateIssueCredentialRecordResponse] =
-        summon[RootJsonFormat[CreateIssueCredentialRecordResponse]]
+      implicit def fromEntityUnmarshallerCreateIssueCredentialRecordRequest
+          : FromEntityUnmarshaller[CreateIssueCredentialRecordRequest] =
+        summon[RootJsonFormat[CreateIssueCredentialRecordRequest]]
+
+      implicit def toEntityMarshallerIssueCredentialRecord: ToEntityMarshaller[IssueCredentialRecord] =
+        summon[RootJsonFormat[IssueCredentialRecord]]
+
+      implicit def toEntityMarshallerIssueCredentialRecordCollection
+          : ToEntityMarshaller[IssueCredentialRecordCollection] =
+        summon[RootJsonFormat[IssueCredentialRecordCollection]]
+
+      implicit def toEntityMarshallerErrorResponse: ToEntityMarshaller[ErrorResponse] =
+        summon[RootJsonFormat[ErrorResponse]]
+
     }
   }
 }
