# prism-agent/service/server/src/main/scala/io/iohk/atala/agent/server/http/model/OASErrorModelHelper.scala
@@ -3,6 +3,7 @@ package io.iohk.atala.agent.server.http.model
 import akka.http.scaladsl.server.StandardRoute
 import io.iohk.atala.agent.openapi.model.ErrorResponse
 import io.iohk.atala.castor.core.model.error.DIDOperationError
+import io.iohk.atala.pollux.core.model.IssueCredentialError
 
 trait ToErrorResponse[E] {
   def toErrorResponse(e: E): ErrorResponse
@@ -28,6 +29,18 @@ trait OASErrorModelHelper {
 
   given ToErrorResponse[DIDOperationError] with {
     def toErrorResponse(error: DIDOperationError): ErrorResponse = {
+      ErrorResponse(
+        `type` = "error-type",
+        title = "error-title",
+        status = 500,
+        detail = Some(error.toString),
+        instance = "error-instance"
+      )
+    }
+  }
+
+  given ToErrorResponse[IssueCredentialError] with {
+    def toErrorResponse(error: IssueCredentialError): ErrorResponse = {
       ErrorResponse(
         `type` = "error-type",
         title = "error-title",
